Se añadieron animaciones.

--- a/pages/albums.html
+++ b/pages/albums.html
@@ -10,7 +10,10 @@
     <meta name="keywords" content="Music, world music, artists, album, vynil, cassette, CD, artwork, recording studio">
     <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- AOS (Animate On Scroll) -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +27,7 @@
 </header>
 
 <!-- NAV BAR -->
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar navbar-expand-sm sticky-top">
     <ul class="navbar-nav">
         <li class="nav-item ps-3"><a class="nav-link rounded" href="../index.html">Home</a></li>
         <li class="nav-item ps-3"><a class="nav-link rounded" href="artists.html">Artists</a></li>
@@ -37,13 +40,13 @@
 <!-- MAIN -->
 <main class="albums">
 
-<!-- Antônio Carlos Jobim - WAVE -->
+<!-- Tom Jobim - WAVE -->
 <article id="wave" class="p-5">
-    <h2><strong>Antônio Carlos Jobim - WAVE</strong></h2>
+    <h2><strong>Tom Jobim - WAVE</strong></h2>
     <h3>(1967)</h3><br>
     <div class="row align-items-center">
         <!-- Slideshow (6 images) -->
-        <div id="wave-slideshow" class="gallery col-sm carousel slide rounded" data-bs-slide="carousel"><br>
+        <div id="wave-slideshow" class="gallery col-sm carousel slide rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#wave-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#wave-slideshow" data-bs-slide-to="1"></button> 
@@ -55,27 +58,27 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <p>Front</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/front.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/front.jpg" alt="Front"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/front.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/front.jpg" alt="Front"></a>
                 </div>
                 <div class="carousel-item">
                     <p>Inlay 01</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/inlay01.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/inlay01.jpg" alt="Inlay 01"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/inlay01.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/inlay01.jpg" alt="Inlay 01"></a>
                 </div>
                 <div class="carousel-item">
                     <p>Inlay 02</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/inlay02.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/inlay02.jpg" alt="Inlay 02"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/inlay02.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/inlay02.jpg" alt="Inlay 02"></a>
                 </div>
                 <div class="carousel-item">
                     <p>Inlay 03</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/inlay03.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/inlay03.jpg" alt="Inlay 03"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/inlay03.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/inlay03.jpg" alt="Inlay 03"></a>
                 </div>
                 <div class="carousel-item">
                     <p>Inlay 04</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/inlay04.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/inlay04.jpg" alt="Inlay 04"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/inlay04.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/inlay04.jpg" alt="Inlay 04"></a>
                 </div>
                 <div class="carousel-item">
                     <p>Back</p>
-                    <a target="_blank" href="../img/albums/antonio-carlos-jobim/wave/back.jpg"><img class="rounded mx-auto d-block" src="../img/albums/antonio-carlos-jobim/wave/back.jpg" alt="Back"></a>
+                    <a target="_blank" href="../img/albums/tom-jobim/wave/back.jpg"><img class="rounded mx-auto d-block" src="../img/albums/tom-jobim/wave/back.jpg" alt="Back"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#wave-slideshow" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
@@ -148,7 +151,7 @@
     <h3>(1985)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (5 images) -->
-        <div id="esa-tristeza-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="esa-tristeza-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#esa-tristeza-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#esa-tristeza-slideshow" data-bs-slide-to="1"></button> 
@@ -232,7 +235,7 @@
     <h3>(1969)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (3 images) -->
-        <div id="bien-de-pueblo-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="bien-de-pueblo-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#bien-de-pueblo-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#bien-de-pueblo-slideshow" data-bs-slide-to="1"></button> 
@@ -302,7 +305,7 @@
     <h3>(1974)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (4 images) -->
-        <div id="los-alegres-chicos-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="los-alegres-chicos-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#los-alegres-chicos-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#los-alegres-chicos-slideshow" data-bs-slide-to="1"></button> 
@@ -375,7 +378,7 @@
     <h3>(1989)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (6 images) -->
-        <div id="la-mosca-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="la-mosca-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#la-mosca-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#la-mosca-slideshow" data-bs-slide-to="1"></button> 
@@ -456,7 +459,7 @@
     <h3>(1991)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (5 images) -->
-        <div id="tchokola-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="tchokola-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#tchokola-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#tchokola-slideshow" data-bs-slide-to="1"></button> 
@@ -587,7 +590,7 @@
     <h3>(1983)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (7 images) -->
-        <div id="segundos-afuera-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="segundos-afuera-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#segundos-afuera-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#segundos-afuera-slideshow" data-bs-slide-to="1"></button> 
@@ -678,7 +681,7 @@
     <h3>(1997)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (28 images) -->
-        <div id="buena-vista-social-club-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="buena-vista-social-club-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#buena-vista-social-club-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#buena-vista-social-club-slideshow" data-bs-slide-to="1"></button> 
@@ -905,7 +908,7 @@
     <h3>(1966)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (5 images) -->
-        <div id="los-mockers-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="los-mockers-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#los-mockers-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#los-mockers-slideshow" data-bs-slide-to="1"></button> 
@@ -983,7 +986,7 @@
     <h3>(1958)</h3>
     <div class="row align-items-center">
         <!-- Slideshow (4 images) -->
-        <div id="prez-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel"><br>
+        <div id="prez-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#prez-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#prez-slideshow" data-bs-slide-to="1"></button> 
@@ -1090,7 +1093,11 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 
 </html>
