--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Music, world music, artists, album, vynil, cassette, CD, artwork, recording studio">
     <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
@@ -24,7 +25,7 @@
 </header>
 
 <!-- NAV BAR -->
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar navbar-expand-sm sticky-top">
     <ul class="navbar-nav">
         <li class="nav-item ps-3"><a class="nav-link rounded" href="../index.html">Home</a></li>
         <li class="nav-item ps-3"><a class="nav-link rounded" href="artists.html">Artists</a></li>
