--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -24,7 +24,7 @@
 </header>
 
 <!-- NAV BAR -->
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar navbar-expand-sm sticky-top">
     <ul class="navbar-nav">
         <li class="nav-item ps-3"><a class="nav-link rounded" href="../index.html">Home</a></li>
         <li class="nav-item ps-3"><a class="nav-link rounded" href="artists.html">Artists</a></li>
