Se modificaron las 'description' y 'keywords' de la etiqueta <meta> en cada HTML. También se modificó la antigua etiqueta <details> en la página 'Albums' por un desplegable más adecuado.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website about music albums, artists, vynils, cassettes, CDs, artwork">
-    <meta name="keywords" content="Music, world music, artists, album, vynil, cassette, CD, artwork, recording studio">
+    <meta name="description" content="A website about music albums and the artists involved in the making. Also know about where they were recorded or look at the beautiful artwork from different editions like vynils, cassettes and CDs.">
+    <meta name="keywords" content="Music, world music, artists, composers, albums, vynils, cassettes, CDs, artworks, recording studios, music producers">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap -->
