--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website about music albums, artists, vynils, cassettes, CDs, artwork">
-    <meta name="keywords" content="Music, world music, artists, album, vynil, cassette, CD, artwork, recording studio">
+    <meta name="description" content="Leave your comments, critics or suggestions.">
+    <meta name="keywords" content="Music, world music, artists, composers, albums, vynils, cassettes, CDs, artworks, recording studios, music producers">
     <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
