Se corrigieron las rutas de los enlaces del logo y se sustituyeron algunos <br> por .mb-5 en la página albums.html

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -23,7 +23,7 @@
         <h1 class="text-end">THE MUSIC CAULDRON</h1>
         <p class="text-end">The website about the cookers of music behind the songs</p>
     </div>
-    <a href="index.html"><img class="rounded-circle img-fluid" src="../img/logo.png" alt="The Music Cauldron"></a>
+    <a href="../index.html"><img class="rounded-circle img-fluid" src="../img/logo.png" alt="The Music Cauldron"></a>
 </header>
 
 <!-- NAV BAR -->
