Se corrigieron algunos detalles menores y se agregaron las fichas de Jorge Galemire, Los Mockers y Dámaso Pérez Prado en la página Artists.

--- a/pages/albums.html
+++ b/pages/albums.html
@@ -46,7 +46,7 @@
     <h3>(1967)</h3><br>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (6 images) -->
-        <div id="wave-slideshow" class="gallery col-sm carousel slide rounded mb-1" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="wave-slideshow" class="gallery col-sm carousel slide rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#wave-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#wave-slideshow" data-bs-slide-to="1"></button> 
@@ -148,7 +148,7 @@
     <h3>(1985)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (5 images) -->
-        <div id="esa-tristeza-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="esa-tristeza-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#esa-tristeza-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#esa-tristeza-slideshow" data-bs-slide-to="1"></button> 
@@ -215,7 +215,7 @@
         <br>
         Idea original de tapa: "Pincho" Casanova<br>
         Fotografía: "Pincho" Casanova - Esteban Schroeder<br>
-        Ilustración de librillo: Enrique Badaro, Retrato: Carmen Sande<br>
+        Ilustración de librillo: Enrique Badaro - Retrato: Carmen Sande<br>
         Diagramación: Enrique Badaro - "Pincho" Casanova - Laura Canoura<br>
         <br>
         Orfeo - 1985<br>
@@ -229,7 +229,7 @@
     <h3>(1969)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (3 images) -->
-        <div id="bien-de-pueblo-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="bien-de-pueblo-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#bien-de-pueblo-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#bien-de-pueblo-slideshow" data-bs-slide-to="1"></button> 
@@ -296,7 +296,7 @@
     <h3>(1974)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (4 images) -->
-        <div id="los-alegres-chicos-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="los-alegres-chicos-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#los-alegres-chicos-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#los-alegres-chicos-slideshow" data-bs-slide-to="1"></button> 
@@ -366,7 +366,7 @@
     <h3>(1989)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (6 images) -->
-        <div id="la-mosca-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="la-mosca-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#la-mosca-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#la-mosca-slideshow" data-bs-slide-to="1"></button> 
@@ -444,7 +444,7 @@
     <h3>(1991)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (5 images) -->
-        <div id="tchokola-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="tchokola-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#tchokola-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#tchokola-slideshow" data-bs-slide-to="1"></button> 
@@ -571,7 +571,7 @@
     <h3>(1983)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (7 images) -->
-        <div id="segundos-afuera-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="segundos-afuera-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#segundos-afuera-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#segundos-afuera-slideshow" data-bs-slide-to="1"></button> 
@@ -658,7 +658,7 @@
     <h3>(1997)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (28 images) -->
-        <div id="buena-vista-social-club-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="buena-vista-social-club-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#buena-vista-social-club-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#buena-vista-social-club-slideshow" data-bs-slide-to="1"></button> 
@@ -875,11 +875,11 @@
 
 <!-- LOS MOCKERS - Los Mockers -->
 <article id="los-mockers" class="p-5">
-    <h2><strong>LOS MOCKERS - Los Mockers</strong></h2>
+    <h2><strong>Los Mockers - LOS MOCKERS</strong></h2>
     <h3>(1966)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (5 images) -->
-        <div id="los-mockers-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="los-mockers-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#los-mockers-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#los-mockers-slideshow" data-bs-slide-to="1"></button> 
@@ -937,23 +937,23 @@
     <!-- Info -->
     <button type="button" data-bs-target="#los-mockers-info" data-bs-toggle="collapse" class="btn btn-outline-primary btn-lg d-block m-auto">DETAILS</button>
     <p id="los-mockers-info" class="collapse details"><br>
-        * Polo Pereira - Guitarra y voz<br>
-        * Jorge Fernandez - Guitarra<br>
-        * Esteban Hirschfield - Órgano y armónica<br>
-        * Julio Montero - Bajo<br>
-        * Beto Freigedo - Batería<br>
+        * Polo Pereira - Guitar and voice<br>
+        * Jorge Fernandez - Guitar<br>
+        * Esteban Hirschfield - Organ and harmonica<br>
+        * Julio Montero - Bass<br>
+        * Beto Freigedo - Drums<br>
         <br>
-        Grabado en Odeón Argentina (Bs. As.) 1966
+        Recorded at Odeón Argentina (Bs. As.) 1966
     </p>
 </article>
 
 <!-- PÉREZ PRADO & HIS ORCHESTRA - "Prez" -->
 <article id="prez" class="p-5">
-    <h2><strong>PÉREZ PRADO & HIS ORCHESTRA - "Prez"</strong></h2>
+    <h2><strong>Pérez Prado & His Orchestra - "PREZ"</strong></h2>
     <h3>(1958)</h3>
     <div class="row align-items-center mb-5">
         <!-- Slideshow (4 images) -->
-        <div id="prez-slideshow" class="gallery col-sm carousel slide container rounded" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+        <div id="prez-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#prez-slideshow" data-bs-slide-to="0" class="active"></button> 
                 <button type="button" data-bs-target="#prez-slideshow" data-bs-slide-to="1"></button> 
