--- a/pages/artists.html
+++ b/pages/artists.html
@@ -112,7 +112,7 @@
             <div class="col-sm">
                 <h2>Combo Camagüey</h2>
                 <h3>(1960 - 1990)</h3>
-                <p>Combo Camagüey was an Uruguayan orchestra conducted by Armando Bia and integrated by Jorge Vallejo, Santiago “Chileno” Salas, “Paqui” Vignole, Alexis Buenseñor, Juan Verrone, Neldo Castro, Rodolfo Martínez y Victor Morín. It was one of the most important groups of the genre known as "Uruguayan tropical music".</p><br>
+                <p>Combo Camagüey was an Uruguayan orchestra conducted by Armando Bia and integrated by Jorge Vallejo, Santiago "Chileno" Salas, "Paqui" Vignole, Alexis Buenseñor, Juan Verrone, Neldo Castro, Rodolfo Martínez y Victor Morín. It was one of the most important groups of the genre known as "Uruguayan tropical music".</p><br>
                 <a href="https://es.wikipedia.org/wiki/Combo_Camag%C3%BCey">- Continue to Wikipedia (spanish) -</a>
             </div>
         </div>
@@ -130,6 +130,46 @@
             </div>
         </div>
     </article>
+
+    <!-- Jorge Galemire -->
+    <article class="p-4" id="jorge-galemire">
+        <div class="row align-items-center" data-aos="fade-right">
+            <img src="https://www.cancioneros.com/fotos/ep007467_1.jpg" alt="Jorge Galemire">
+            <div class="col-sm">
+                <h2>Jorge Galemire</h2>
+                <h3>(March 11, 1951 - June 6, 2015)</h3>
+                <p>Jorge Galemire was an Uruguayan composer, guitarist, songwriter, arranger, and singer. Before launching his solo career, he participated in great Uruguayan groups such as "Canciones para no dormir la siesta" and "Los que iban cantando", group which he cofounded. He also collaborated with musicians such as Jaime Roos, Fernando Cabrera, Jorge Drexler and many others.</p><br>
+                <a href="https://en.wikipedia.org/wiki/Jorge_Galemire">- Continue to Wikipedia -</a>
+            </div>
+        </div>
+    </article>
+    
+    <!-- Los Mockers -->
+    <article class="p-4" id="los-mockers">
+        <div class="row align-items-center" data-aos="fade-right">
+            <img src="https://media.cdnp.elobservador.com.uy/032021/1615379669535.jpg?&cw=790" alt="Los Mockers">
+            <div class="col-sm">
+                <h2>Los Mockers</h2>
+                <h3>(1963 - 1967)</h3>
+                <p>Los Mockers were a very popular 60's group from Uruguay, original formed by Polo Pereira, Jorge Fernández, Esteban Hirschfield, Julio Montero and Beto Freigeda. Their music was heavily influenced by the Rolling Stones and also covered many of their songs. Hence, some people consider "Los Mockers" as the counterpart to the other famous Uruguayan group "Los Shakers", who were more akin to the music of The Beatles.</p><br>
+                <a href="https://en.wikipedia.org/wiki/Los_Mockers">- Continue to Wikipedia -</a>
+            </div>
+        </div>
+    </article>
+    
+    <!-- Dámaso Pérez Prado -->
+    <article class="p-4" id="damaso-perez-prado">
+        <div class="row align-items-center" data-aos="fade-right">
+            <img src="https://tse1.explicit.bing.net/th?id=OIP.niN-YDSesebmHRdQWbgelQHaEw&pid=Api" alt="Dámaso Pérez Prado">
+            <div class="col-sm">
+                <h2>Dámaso Pérez Perado</h2>
+                <h3>(December 11, 1916 - September 14, 1989)</h3>
+                <p>Dámaso Pérez Prado was a famous Cuban pianist, bandleader, composer and arranger. He is mostly known as the "King of Mambo" for his widely popular difussion of the genre, but he also was able to succesfully merge Latin rhythms with jazz and even classical music.</p><br>
+                <a href="https://en.wikipedia.org/wiki/P%C3%A9rez_Prado">- Continue to Wikipedia -</a>
+            </div>
+        </div>
+    </article>
+
 </main>
 
 <!-- FOOTER -->
