--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -54,7 +54,7 @@
             <label for="comment" class="form-label">Leave your comment here:</label>
             <textarea id="comment" class="form-control" cols="30" rows="3"></textarea>
         </div><br>
-        <input type="submit" value="Post comment" class="btn btn-secondary">
+        <input type="submit" value="Post comment" class="btn btn-secondary" onclick="notYet()">
     </fieldset>
 </form><br>
 <p>You can also send us an e-mail to <a class="text-decoration-none" href="mailto:elcalderodelamusica@gmail.com">elcalderodelamusica@gmail.com</a><br>
@@ -70,7 +70,13 @@ We read you!</p>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<!-- JS -->
+<script>
+    function notYet() {
+        alert("Available soon - Sorry!\nYou still can send us an e-mail in the meantime.");
+    };
+</script>
+    
 </body>
 
 </html>
