--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -39,7 +39,7 @@
 <main class="feedbacks p-3">
 
 <p>We would much appreciate any suggestions, critics or commentaries about the site, the music or whatever.</p><br>
-<form action="#" method="post" class="container">
+<form method="post" class="container">
     <fieldset class="p-4 rounded">
         <legend>Feedbacks</legend><br>
         <div class="mt-3 mb-3">
@@ -73,7 +73,7 @@ We read you!</p>
 <!-- JS -->
 <script>
     function notYet() {
-        alert("Available soon - Sorry!\nYou still can send us an e-mail in the meantime.");
+        alert("Sorry! - Available soon\nYou still can send us an e-mail in the meantime.");
     };
 </script>
     
