--- a/pages/albums.html
+++ b/pages/albums.html
@@ -1045,6 +1045,68 @@
     </p>
 </article>
 
+<!-- Nana Mouskouri - EPITAPHIOS -->
+<article id="epitaphios" class="p-5">
+    <h2><strong>Nana Mouskouri - EPITAPHIOS</strong></h2>
+    <h3>(1964)</h3>
+    <div class="row align-items-center mb-5">
+        <!-- Slideshow (4 images) -->
+        <div id="epitaphios-slideshow" class="gallery col-sm carousel slide container rounded mb-4" data-bs-slide="carousel" data-aos="fade-down" data-aos-duration="1000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide-to="0" class="active"></button> 
+                <button type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide-to="1"></button> 
+                <button type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide-to="2"></button> 
+                <button type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide-to="3"></button> 
+                <button type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide-to="4"></button> 
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <p>Front</p>
+                    <a target="_blank" href="../img/albums/nana-mouskouri/epitaphios/front.jpg"><img class="rounded mx-auto d-block" src="../img/albums/nana-mouskouri/epitaphios/front.jpg" alt="Front"></a>
+                </div>
+                <div class="carousel-item">
+                    <p>Inlay 01</p>
+                    <a target="_blank" href="../img/albums/nana-mouskouri/epitaphios/inlay01.jpg"><img class="rounded mx-auto d-block" src="../img/albums/nana-mouskouri/epitaphios/inlay01.jpg" alt="Inlay 01"></a>
+                </div>
+                <div class="carousel-item">
+                    <p>Inlay 02</p>
+                    <a target="_blank" href="../img/albums/nana-mouskouri/epitaphios/inlay02.jpg"><img class="rounded mx-auto d-block" src="../img/albums/nana-mouskouri/epitaphios/inlay02.jpg" alt="Inlay 02"></a>
+                </div>
+                <div class="carousel-item">
+                    <p>Back</p>
+                    <a target="_blank" href="../img/albums/nana-mouskouri/epitaphios/back.jpg"><img class="rounded mx-auto d-block" src="../img/albums/nana-mouskouri/epitaphios/back.jpg" alt="Back"></a>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
+            <button class="carousel-control-next" type="button" data-bs-target="#epitaphios-slideshow" data-bs-slide="next"><span class="carousel-control-next-icon"></span></button>
+        </div> 
+        <!-- Tracklist -->
+        <ol class="tracklist col-sm">
+            <li>POU PETAXE T'AGORI MOU? (Where Did My Boy Fly?)</li>
+            <li>HILI MOU MOSHOMIRISTO (Sweet Lips)</li>
+            <li>MERA MAYOU (A Day of May)</li>
+            <li>VASILEPSES ASTERI MOU (You Set My Star)</li>
+            <li>NA HA T'ATHANATO NERO (I Wish I Had The Water of Inmortality)</li>
+            <li>STO PARATHIRI STEKOSOUN (You Were Standing Near The Window)</li>
+            <li>ISSOUN KALOS, ISSOUN GLIKOS (You Were Nice, You Were Sweet)</li>
+            <li>GLIKE MOU ESI (You Are Sweet)</li>
+            <li>VREHI STI FTOHOGUITONIA (It Rains At The Poor Neighborhood) [Mikis Theodorakis / Tassos Leivaditis]</li>
+            <li>ENA TO HELIDONI (The Martlet) [Mikis Theodorakis / Odysseas Elytis]</li>
+            <li>I HARTAETI (The Kites) [Mikis Theodorakis]</li>
+        </ol>
+    </div>
+    <!-- Streaming links -->
+    <h3>LISTEN TO THIS ALBUM ON:</h3>
+    <div class="streaming-links d-flex justify-content-center mb-5">
+        <a class="youtube" href="https://youtube.com/playlist?list=OLAK5uy_lFMLWPEw6Nq6oW-j1eMjB1j_8jMVR2beg" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16"><path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/></svg></a>
+    </div>
+    <!-- Info -->
+    <button type="button" data-bs-target="#album-info" data-bs-toggle="collapse" class="btn btn-outline-primary btn-lg d-block m-auto">DETAILS</button>
+    <p id="album-info" class="collapse details"><br>
+        All texts written by Yiannis Ritsos and music by Mikis Theodorakis (except indicated).
+    </p>
+</article>
+
 </main>
 
 <!-- FOOTER -->
