--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -39,7 +39,7 @@
 <main class="feedbacks p-3">
 
 <p>We would much appreciate any suggestions, critics or commentaries about the site, the music or whatever.</p><br>
-<form action="#" method="post" class="container">
+<form class="container">
     <fieldset class="p-4 rounded">
         <legend>Feedbacks</legend><br>
         <div class="mt-3 mb-3">
@@ -47,18 +47,20 @@
             <input id="name" type="text" class="form-control" placeholder="Name">
         </div>
         <div class="mt-3 mb-3">
-            <label for="country" class="form-label">Where are you from?</label>
-            <input id="country" type="text" class="form-control" placeholder="City, state or province and/or country">
+            <label for="place" class="form-label">Where are you from?</label>
+            <input id="place" type="text" class="form-control" placeholder="City, state or province and/or country">
         </div>
         <div class="mt-3 mb-3">
             <label for="comment" class="form-label">Leave your comment here:</label>
             <textarea id="comment" class="form-control" cols="30" rows="3"></textarea>
         </div><br>
-        <input type="submit" value="Post comment" class="btn btn-secondary">
+        <button type="button" class="btn btn-secondary" onclick="addComment()">Post comment</button>
     </fieldset>
 </form><br>
 <p>You can also send us an e-mail to <a class="text-decoration-none" href="mailto:elcalderodelamusica@gmail.com">elcalderodelamusica@gmail.com</a><br>
-We read you!</p>
+    We read you!</p>
+<hr><br>
+<div id="comments"></div>
 
 </main>
 
@@ -70,6 +72,8 @@ We read you!</p>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<!-- JavaScript -->
+<script src="../scripts/script.js"></script>
 
 </body>
 
