--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -73,8 +73,10 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <!-- JavaScript -->
-<script src="../scripts/script.js"></script>
-
+<!-- <script src="../scripts/script.js"></script> -->
+<script>
+    alert("Soon available - We're sorry!\nYou still can send us an email in the meantime.")
+</script>
+    
 </body>
-
 </html>
