Update feedbacks.html: Created alert message for posting.

--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -54,7 +54,7 @@
             <label for="comment" class="form-label">Leave your comment here:</label>
             <textarea id="comment" class="form-control" cols="30" rows="3"></textarea>
         </div><br>
-        <button type="button" class="btn btn-secondary" onclick="addComment()">Post comment</button>
+        <button type="button" class="btn btn-secondary" onclick="soonAvailable()">Post comment</button>
     </fieldset>
 </form><br>
 <p>You can also send us an e-mail to <a class="text-decoration-none" href="mailto:elcalderodelamusica@gmail.com">elcalderodelamusica@gmail.com</a><br>
@@ -75,7 +75,9 @@
 <!-- JavaScript -->
 <!-- <script src="../scripts/script.js"></script> -->
 <script>
-    alert("Soon available - We're sorry!\nYou still can send us an email in the meantime.")
+    function soonAvailable() {
+        alert("Soon available - We're sorry!\nYou still can send us an email in the meantime.");
+    }
 </script>
     
 </body>
