--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -51,16 +51,25 @@
             <input id="place" type="text" class="form-control" placeholder="City, state or province and/or country">
         </div>
         <div class="mt-3 mb-3">
-            <label for="comment" class="form-label">Leave your comment here:</label>
-            <textarea id="comment" class="form-control" cols="30" rows="3"></textarea>
+            <label for="comment-text" class="form-label">Leave your comment here:</label>
+            <textarea id="comment-text" class="form-control" cols="30" rows="3"></textarea>
         </div><br>
-        <button type="button" class="btn btn-secondary" onclick="addComment()">Post comment</button>
+        <button type="button" class="btn btn-secondary" onclick="postComment()">Post comment</button>
     </fieldset>
-</form><br>
+</form>
+<br>
 <p>You can also send us an e-mail to <a class="text-decoration-none" href="mailto:elcalderodelamusica@gmail.com">elcalderodelamusica@gmail.com</a><br>
     We read you!</p>
-<hr><br>
-<div id="comments"></div>
+<hr>
+    <div id="comments"></div>
+<hr>
+<div>
+    <h3>Search comment by ID:</h3>
+    <input type="number" id="commentId" onchange="getCommentById()" min="1">
+    <button onclick="editComment()">Edit</button>
+    <button onclick="deleteComment()">Delete</button>
+    <div id="getComment"></div>
+</div>
 
 </main>
 
@@ -73,7 +82,7 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <!-- JavaScript -->
-<script src="../scripts/script.js"></script>
+<script src="../scripts/feedbacks.js"></script>
 
 </body>
 
