Re-uploaded website with minor styles changes

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -56,7 +56,7 @@
 <!-- Jean-Luc Ponty -->
     <article class="p-4" id="jean-luc-ponty">
         <div class="row align-items-center" data-aos="fade-right">
-            <img src="https://tse4.mm.bing.net/th?id=OIP.VqdGHUJTaTzvrFpJfnCfXQHaE-&pid=Api" alt="Jean-Luc Ponty">
+            <img src="https://s.hdnux.com/photos/11/21/52/2431651/5/1200x0.jpg" alt="Jean-Luc Ponty">
             <div class="col-sm">
                 <h2>Jean-Luc Ponty</h2>
                 <h3>(September 29, 1942)</h3>
@@ -82,7 +82,7 @@
 <!-- Laura Canoura -->
     <article class="p-4" id="laura-canoura">
         <div class="row align-items-center" data-aos="fade-right">
-            <img src="https://tse2.mm.bing.net/th?id=OIP.hJxwjXlf3ClDBsGMnHUOlgAAAA&pid=Api" alt="Laura Canoura">
+            <img src="https://fotos.perfil.com/2019/09/01/trim/1280/720/canoura.jpg" alt="Laura Canoura">
             <div class="col-sm">
                 <h2>Laura Canoura</h2>
                 <h3>(January 2, 1957)</h3>
