--- a/pages/feedbacks.html
+++ b/pages/feedbacks.html
@@ -54,23 +54,12 @@
             <label for="comment-text" class="form-label">Leave your comment here:</label>
             <textarea id="comment-text" class="form-control" cols="30" rows="3"></textarea>
         </div><br>
-        <button type="button" class="btn btn-secondary" onclick="postComment()">Post comment</button>
+        <button type="button" class="btn btn-secondary" onclick="soonAvailable()">Post comment</button>
     </fieldset>
 </form>
 <br>
 <p>You can also send us an e-mail to <a class="text-decoration-none" href="mailto:elcalderodelamusica@gmail.com">elcalderodelamusica@gmail.com</a><br>
     We read you!</p>
-<hr>
-    <div id="comments"></div>
-<hr>
-<div>
-    <h3>Search comment by ID:</h3>
-    <input type="number" id="commentId" onchange="getCommentById()" min="1">
-    <button onclick="editComment()">Edit</button>
-    <button onclick="deleteComment()">Delete</button>
-    <div id="getComment"></div>
-</div>
-
 </main>
 
 <!-- FOOTER -->
@@ -79,10 +68,11 @@
     <a href="#top" class="text-decoration-none">Back to the top</a>
 </footer>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <!-- JavaScript -->
 <script src="../scripts/feedbacks.js"></script>
+<script>
+    alert("Soon available!");
+</script>
 
 </body>
 </html>
